--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,31 @@
+amqp==5.1.1
+billiard==3.6.4.0
 black==22.12.0
 boto3==1.26.27
 botocore==1.29.27
+celery==5.2.7
+certifi==2022.12.7
+charset-normalizer==2.1.1
 click==8.1.3
+click-didyoumean==0.3.0
+click-plugins==1.1.1
+click-repl==0.2.0
+idna==3.4
 jmespath==1.0.1
+kombu==5.2.4
 mypy-extensions==0.4.3
 pathspec==0.10.3
 platformdirs==2.6.0
+prompt-toolkit==3.0.36
 pydantic==1.10.2
 python-dateutil==2.8.2
+pytz==2022.6
+requests==2.28.1
 s3transfer==0.6.0
 six==1.16.0
 tomli==2.0.1
 typing-extensions==4.4.0
 urllib3==1.26.13
+vine==5.0.0
+watchdog==2.2.0
+wcwidth==0.2.5
