--- a/requirements.txt
+++ b/requirements.txt
@@ -19,6 +19,7 @@ platformdirs==2.6.0
 prompt-toolkit==3.0.36
 pydantic==1.10.2
 python-dateutil==2.8.2
+python-dotenv==0.21.0
 pytz==2022.6
 requests==2.28.1
 s3transfer==0.6.0
