--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 AWS-REGION=us-east-2
-ACCESS_KEY_ID=AKIA2SH2F27UPNSOHY35
-SECRET_ACCESS_KEY=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
-USER_POOL_ID=us-east-2_M1Eh4E3MA
-BUCKET_NAME=file-storage-global113245-dev
-CLIENT_ID=4rmavund0ekutqevh36li6ehta
-QUEUE_URL=https://sqs.ap-south-1.amazonaws.com/726374143976/file-space-sqs
+ACCESS_KEY_ID=
+SECRET_ACCESS_KEY=
+USER_POOL_ID=
+BUCKET_NAME=
+CLIENT_ID=
+QUEUE_URL=
